<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Kaltura VideoPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Kaltura VoD</string>
    <string name="abc_dvr">ABC DVR</string>
    <string name="seekFwd">Seek Fwd</string>
    <string name="seekBackward">Seek Backward</string>
    <string name="testURL">djing</string>
    <string name="OpenURL">Open URL</string>
    <string name="url_label">Video URL</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="seekFront">Seek Front</string>

</resources>
