<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.videoplayer.VideoPlayerActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="6"
        android:title="@string/action_settings"
        app:showAsAction="never">
    </item>
    <item android:id="@+id/abc_dvr_item" android:title="@string/abc_dvr" android:orderInCategory="5"></item>
    <item android:id="@+id/seekFwd" android:title="@string/seekFwd" android:orderInCategory="3" android:visible="true"></item>
    <item android:id="@+id/seekBwd" android:title="@string/seekBackward" android:orderInCategory="4" android:visible="true"></item>
    <item android:id="@+id/testUrl" android:title="@string/testURL" android:orderInCategory="7" android:visible="false"></item>
    <item android:id="@+id/openUrl" android:title="@string/OpenURL" android:orderInCategory="1"></item>
    <item android:id="@+id/play_pause" android:title="@string/play_pause" android:orderInCategory="2"></item>

</menu>
